# Soulmast3r01

./: README.md
week01/day2/: main.cpp
week01/day2/05 - TwoNumbers/: CMakeLists.txt  main.cpp
week01/day2/06 - CodingHours/: CMakeLists.txt  main.cpp
week01/day2/07 - FavoriteNumber/: CMakeLists.txt  main.cpp
week01/day2/08 - Swap/: CMakeLists.txt  main.cpp
week01/day2/09 - Bmi muscle/: CMakeLists.txt  main.cpp
week01/day2/10 - DefineBasicInfo/: CMakeLists.txt  main.cpp
week01/day2/11 - VariableMutation/: CMakeLists.txt  main.cpp
week01/day2/12 - Cuboid muscle/: CMakeLists.txt  main.cpp
week01/day2/13 - SecondsInADay/: CMakeLists.txt  main.cpp
week01/day2/14 - HelloUser/: CMakeLists.txt  main.cpp
week01/day2/15 - MileToKmConverter/: CMakeLists.txt  main.cpp
week02/day01/Append a/: main.cpp
week02/day01/Change element/: CMakeLists.txt  main.cpp
week02/day01/Compare Length/: CMakeLists.txt  main.cpp
week02/day01/Double items/: CMakeLists.txt  main.cpp
week02/day01/Doubling/: main.cpp
week02/day01/Greeter function/: CMakeLists.txt  main.cpp
week02/day01/Increment element/: CMakeLists.txt  (+1 more)
week05/day03/Instruments to Stringed Instruments/: CMakeLists.txt  bassguitar.cpp  bassguitar.h  electricguitar.cpp  electricguitar.h  instrument.h  main.cpp  stringedinstrument.cpp  stringedinstrument.h  violin.cpp  violin.h  voilin.cpp  voilin.h
week08/complex data structure/: CMakeLists.txt  linked_list.c  linked_list.h  main.c
week08/drawing project/: CMakeLists.txt  linked_list.c  linked_list.h  main.c
week09/day03/: main.c  main2.c  main3.c
(+182 files in other folders)
